# aerion

./: .gitignore  CONFIG_GUIDE.md  README.md  environment.yaml  pyproject.toml
configs/: agentformer_aerion.yaml  base_config.yaml  execute_aerion.yaml  execute_flightbert.yaml  execute_transformer.yaml  transformer_aerion.yaml  transformer_basic.yaml
configs/dataset/: first10days-clipped.yaml  first10days.yaml  first20days.yaml  first3days.yaml  january.yaml  single_day.yaml  test_autumn.yaml  test_spring.yaml  test_summer.yaml  test_winter.yaml
configs/features/: aerion.yaml  basic.yaml
configs/model/: aerion.yaml  agentformer.yaml  base_model.yaml  flight_bert.yaml  transformer.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/scene-creation/: flight_appears.yaml  sampling.yaml
configs/trainer/: default.yaml
execution/: debug-test.sh  debug.sh  evaluate.sh  predict.sh  train.sh
src/: main.py  trainer.py
src/callbacks/: __init__.py  metrics_parquet_callback.py  save_metrics_callback.py  save_trajectories_callback.py
src/config/: __init__.py  config.py
src/data/: __init__.py  aerion.py  aerion_data.py  approach_data.py  approach_dataset.py  collate.py  data.py  interface.py  traffic_data.py
src/data/compute/: __init__.py  projections.py  runway.py  trajectory.py
src/data/datasets/: __init__.py  aerion_dataset.py  approach_dataset.py  base_dataset.py  traffic_dataset.py
src/data/features/: __init__.py  (+2 more)
src/models/: __init__.py  aerion_module.py  base_module.py  single_agent_module.py  traffic_module.py  transformer_module.py
src/utils/: __init__.py  trainer.py  utils.py
src/visualization/: __init__.py  line_plot_rtd_error.py  predictions_targets.py  scatter_plot_rtd.py  violin_plot_rtde.py
(+54 files in other folders)
